Issue 221: Failed to load Orbit S20180302171354 (#223)
Signed-off-by: Will Dazey <dazeydev.3@gmail.com>

--- a/buildsystem/org.eclipse.persistence.parent/pom.xml
+++ b/buildsystem/org.eclipse.persistence.parent/pom.xml
@@ -47,7 +47,7 @@
         <svn.revision>NA</svn.revision>
         <src>./src</src>
         <!-- BUILD Properties -->
-        <orbit.drop>S20180302171354</orbit.drop>
+        <orbit.drop>R20180606145124</orbit.drop>
         <eclipse.drop>photon</eclipse.drop>
         <findbugs.version>3.0.1</findbugs.version>
         <findbugs.threshold>Normal</findbugs.threshold>
