--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-def artifactVersion = '2.7.2-2-cuba'
-def originalVersion = '2.7.2'
+def artifactVersion = '2.7.3-1-cuba'
+def originalVersion = '2.7.3'
 if (rootProject.hasProperty('buildVersion')) {
     artifactVersion = rootProject['buildVersion']
 }
@@ -78,8 +78,8 @@ publishing {
             pom.withXml {
                 asNode().appendNode('packaging', 'jar')
                 def dependencies = asNode().appendNode('dependencies')
-                addDependency(dependencies, 'org.eclipse.persistence', 'javax.persistence', '2.2.0')
-                addDependency(dependencies, 'org.glassfish', 'javax.json', '1.0.4')
+                addDependency(dependencies, 'org.eclipse.persistence', 'org.eclipse.persistence.asm', originalVersion)
+                addDependency(dependencies, 'javax.json', 'javax.json-api', '1.1.2')
             }
         }
         jpa(MavenPublication) {
@@ -89,10 +89,10 @@ publishing {
             pom.withXml {
                 asNode().appendNode('packaging', 'jar')
                 def dependencies = asNode().appendNode('dependencies')
-                addDependency(dependencies, 'org.eclipse.persistence', 'javax.persistence', '2.2.0')
+                addDependency(dependencies, 'org.eclipse.persistence', 'javax.persistence', '2.2.1')
                 addDependency(dependencies, 'org.eclipse.persistence', 'org.eclipse.persistence.asm', originalVersion)
                 addDependency(dependencies, 'org.eclipse.persistence', 'org.eclipse.persistence.antlr', originalVersion)
-                addDependency(dependencies, 'org.glassfish', 'javax.json', '1.0.4')
+                addDependency(dependencies, 'javax.json', 'javax.json-api', '1.1.2')
                 addDependency(dependencies, 'org.eclipse.persistence', 'org.eclipse.persistence.jpa.jpql', originalVersion)
                 addDependency(dependencies, 'org.eclipse.persistence', 'org.eclipse.persistence.core', artifactVersion)
             }
